@@ -66,6 +66,13 @@ extern "C" {
 #include "newalloc.h"
 
 #ifdef __cplusplus
+#ifdef max
+#undef max
+#endif
+
+#ifdef min
+#undef min
+#endif
 }
 #endif
 
